--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 </body>
 <script src="./erudaApi.js"></script>
 <!-- <script src="D:\.vscode\Vs programmes\softApi\erudaApi.js"></script> -->
+<!-- <script src="https://kidKrishkode.github.io/softApi.github.io/erudaApi.js"></script> -->
 <script>
-    const requestUrl = 'https://kidKrishkode.github.io/softApi.github.io/erudaApi.js?operation=add&operand1=5&operand2=2';
-    const response = handleRequest(requestUrl);
+    const requestUrl = `https://kidKrishkode.github.io/softApi.github.io/erudaApi.js?operation=add&operand1=5&operand2=2`;
+    const response = mathCalc(requestUrl);
     console.log(response);
     document.body.innerHTML += '<br> result: '+response.result;
-    document.body.innerHTML += '<br><br> location: '+window.location.href;
-    // const requestUrl = 'https://kidKrishkode.github.io/softApi.github.io/erudaApi.js?lang=en&message=Hello i am krishnendu';
-    // const response = voiceOver(requestUrl);
+    document.body.innerHTML += '<br><br> location: '+window.location.href+'<br><br>';
 </script>
 </html>
