--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inphant Api</title>
     <link rel="icon" href="./fav-icon/logo-o-c.png">
-    <link rel="stylesheet" href="./Components/origin.css">
 </head>
-<style id="jsStyle"></style>
+<style>
+body{
+    padding: 0;
+    margin: 0;
+    font-family: 'Courier New', Courier, monospace;
+}
+h1{
+    color: #0c8ff0;
+    text-align: center;
+    font-family: sans-serif;
+}
+</style>
 <body>
     <h1 onclick="mainPage();">API Console</h1>
 </body>
